--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">HearthStoneWinRate</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-
+    <string name="main_context_menu_title">Menu</string>
+    <string name="main_context_menu_delete_btn">Delete</string>
 </resources>
