--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="menu_settings">Settings</string>
     <string name="main_context_menu_title">Menu</string>
     <string name="main_context_menu_delete_btn">Delete</string>
+    
+    <string name="detail_no_record">No record</string>
 </resources>
