--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="main_context_menu_title">Menu</string>
     <string name="main_context_menu_delete_btn">Delete</string>
     <string name="main_create_btn">New Role</string>
+    <string name="main_create_view_title">Add New Deck</string>
+    <string name="main_create_view_name">Deck Name</string>
     <string name="detail_no_record">No record</string>
     <string name="detail_win_btn">win</string>
     <string name="detail_lose_btn">lose</string>
@@ -19,4 +21,5 @@
     <string name="detail_list_winrate">win rate</string>
     <string name="detail_list_win">win</string>
     <string name="detail_list_lose">lose</string>
+
 </resources>
