--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="action_settings">Settings</string>
     <string name="app_name">爐石戰記勝率統計器</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
