--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="menu_settings">Settings</string>
     <string name="main_context_menu_title">Menu</string>
     <string name="main_context_menu_delete_btn">Delete the deck</string>
-    <string name="main_context_menu_move_up">Move Up</string>
+    <string name="main_context_menu_move_up">Move up</string>
+    <string name="main_context_menu_move_to_first">Move to top</string>
     <string name="main_create_btn">New Deck</string>
     <string name="main_create_view_title">Add New Deck</string>
     <string name="main_create_view_name">Deck Name</string>
