--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="arena_newevent_new_event">New Round</string>
     <string name="arena_which_hero">Choose Your Hero</string>
     <string name="arena_match_detail">Match Detail</string>
-    <string name="arena_vs_each_hero">V.S Each Hero</string>
+    <string name="arena_vs_each_hero">V.S Each Hero Detail</string>
     <string name="arena_text_win">win</string>
     <string name="arena_text_total">total</string>
     <string name="arena_text_rate">win rate</string>
