--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,12 +51,11 @@
     <string name="open_normal_game">Normal Game</string>
     <string name="open_arena_game">Arena</string>
     <string name="open_export_csv">"Export csv (Coming SOOOOON!!)"</string>
+    <string name="open_donate">Donate</string>
     
-    <string name="update_note_title">v2.0 Patch Note</string>
-    <string name="update_note_content">1.Add arena mode!!\n 
-2.You can now change deck position in normal mode.\n
-3.Database file is now locate at "HearthStoneWR/db/MyDatabase" on your device. You can backup it if necessary.\n
-4.Performance improvement\n</string>
+    <string name="update_note_title">v2.1 Patch Note</string>
+    <string name="update_note_content">1. Add match detail view in arena mode (show it by clicking top panel in arena mode).\n
+2. Add \"Move deck to top\" function in normal mode.\n</string>
     
 
 </resources>
