--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -49,10 +49,12 @@
     <string name="arena_text_win">勝場</string>
     <string name="arena_text_total">總場次</string>
     <string name="arena_text_rate">勝率</string>
+    <string name="open_acknowledgements">特別感謝</string>
     <string name="open_normal_game">一般對戰</string>
     <string name="open_arena_game">競技場</string>
     <string name="open_export_csv">匯出CSV (Coming SOOOON!!)</string>
     <string name="open_donate">贊助</string>
+    <string name="open_dialog_acknowledgements_title">感謝以下帥哥(正妹)的贊助!!</string>
     
         <string name="dialog_donate_title">贊助資訊</string>
     <string name="dialog_donate_content">感謝您使用這個app,希望拙作對您有幫助.\n 開發app需要啤酒支援, 所以如果您喜歡這個app,您可以贊助我一點點啤酒錢幫助開發ＸＤ\n\n
