--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -52,6 +52,7 @@
     <string name="open_acknowledgements">特別感謝</string>
     <string name="open_normal_game">一般對戰</string>
     <string name="open_arena_game">競技場</string>
+    <string name="open_world_data">世界資料統計</string>
     <string name="open_export_csv">匯出CSV (Coming SOOOON!!)</string>
     <string name="open_donate">贊助</string>
     <string name="open_dialog_acknowledgements_title">感謝以下帥哥(正妹)的贊助!!</string>
