--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -56,6 +56,11 @@
     <string name="open_export_csv">匯出CSV (Coming SOOOON!!)</string>
     <string name="open_donate">贊助</string>
     <string name="open_dialog_acknowledgements_title">感謝以下帥哥(正妹)的贊助!!</string>
+    <string name="world_data_detail">世界資料統計</string>
+    <string name="world_data_pics">個人資料蒐集聲明\n\n
+        本應用程式搜集個人資料來做為分析世界勝率</string>
+    <string name="world_data_pics_agree">我同意。</string>
+    <string name="world_data_pics_confirm">確定</string>
     
         <string name="dialog_donate_title">贊助資訊</string>
     <string name="dialog_donate_content">感謝您使用這個app,希望拙作對您有幫助.\n 開發app需要啤酒支援, 所以如果您喜歡這個app,您可以贊助我一點點啤酒錢幫助開發ＸＤ\n\n
