--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -61,8 +61,12 @@
         本應用程式搜集個人資料來做為分析世界勝率</string>
     <string name="world_data_pics_agree">我同意。</string>
     <string name="world_data_pics_confirm">確定</string>
+    <string name="world_data_dialog_title">提示</string>
+    <string name="world_data_dialog_message">請檢查網路。</string>
+    <string name="world_data_dialog_button">確定</string>
+    <string name="world_data_dialog_progress_message">載入中⋯⋯</string>
     
-        <string name="dialog_donate_title">贊助資訊</string>
+    <string name="dialog_donate_title">贊助資訊</string>
     <string name="dialog_donate_content">感謝您使用這個app,希望拙作對您有幫助.\n 開發app需要啤酒支援, 所以如果您喜歡這個app,您可以贊助我一點點啤酒錢幫助開發ＸＤ\n\n
         請點擊上方PayPal圖示進行贊助!!(單位為美金) \n\n
         贊助的同時記得在\'tell me something\'欄位填上您的暱稱，我會在之後的更新把您加入即將新增的致謝畫面中. 
