--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -52,19 +52,19 @@
     <string name="open_acknowledgements">特別感謝</string>
     <string name="open_normal_game">一般對戰</string>
     <string name="open_arena_game">競技場</string>
-    <string name="open_world_data">世界資料統計</string>
+    <string name="open_world_data">全球資料統計</string>
     <string name="open_export_csv">匯出CSV (Coming SOOOON!!)</string>
     <string name="open_donate">贊助</string>
-    <string name="open_dialog_acknowledgements_title">感謝以下帥哥(正妹)的贊助!!</string>
-    <string name="world_data_detail">世界資料統計</string>
+    <string name="open_dialog_acknowledgements_title">感謝以下 帥哥/正妹 的贊助!!</string>
+    <string name="world_data_detail">全球競技場統計</string>
     <string name="world_data_pics">個人資料蒐集聲明\n\n
-        本應用程式搜集個人資料來做為分析世界勝率</string>
+        我同意提供匿名資料供本應用程式進行統計</string>
     <string name="world_data_pics_agree">我同意。</string>
     <string name="world_data_pics_confirm">確定</string>
     <string name="world_data_dialog_title">提示</string>
-    <string name="world_data_dialog_message">請檢查網路。</string>
+    <string name="world_data_dialog_message">未連接網路或伺服器錯誤</string>
     <string name="world_data_dialog_button">確定</string>
-    <string name="world_data_dialog_progress_message">載入中⋯⋯</string>
+    <string name="world_data_dialog_progress_message">載入中</string>
     
     <string name="dialog_donate_title">贊助資訊</string>
     <string name="dialog_donate_content">感謝您使用這個app,希望拙作對您有幫助.\n 開發app需要啤酒支援, 所以如果您喜歡這個app,您可以贊助我一點點啤酒錢幫助開發ＸＤ\n\n
